# provizio-tdms-sample

./: .gitignore  CMakeLists.txt  README.md  config.h.in  install_dependencies.sh
include/: ProvizioTDMSData.h
libtdms/: CMakeLists.txt
libtdms/include/libtdms/: Channel.h  Group.h  LeadIn.h  MetaData.h  Object.h  ObjectDefaults.h  Root.h  TDMSData.h  TDMSReader.h
libtdms/include/types/: Bool.h  BoolArray.h  DataArray.h  DataType.h  DataTypeFactory.h  DataValue.h  Float128.h  Float128Array.h  Float32.h  Float32Array.h  Float64.h  Float64Array.h  Int16.h  Int16Array.h  Int32.h  Int32Array.h  Int64.h  Int64Array.h  Int8.h  Int8Array.h  Int8Value.h  String.h  StringArray.h  StringValue.h  UInt16.h  UInt16Array.h  UInt32.h  UInt32Array.h  UInt64.h  UInt64Array.h  UInt8.h  UInt8Array.h
libtdms/src/libtdms/: Channel.cpp  Error.cpp  Group.cpp  LeadIn.cpp  MetaData.cpp  Object.cpp  ObjectDefaults.cpp  Root.cpp  TDMSData.cpp  TDMSReader.cpp
libtdms/src/types/: Bool.cpp  BoolArray.cpp  DataTypeFactory.cpp  DataValue.cpp  Float128.cpp  Float128Array.cpp  Float32.cpp  Float32Array.cpp  Float64.cpp  Float64Array.cpp  Int16.cpp  Int16Array.cpp  Int32.cpp  Int32Array.cpp  Int32Value.cpp  Int64.cpp  Int64Array.cpp  Int8.cpp  Int8Array.cpp  Int8Value.cpp  String.cpp  StringArray.cpp  UInt16.cpp  UInt16Array.cpp  UInt32.cpp  UInt32Array.cpp  UInt64.cpp  UInt64Array.cpp  UInt8.cpp  UInt8Array.cpp
src/: ProvizioTDMSData.cpp  main.cpp
tdmsreader/: CMakeLists.txt  main.cpp
